--- a/public/output.css
+++ b/public/output.css
@@ -194,6 +194,12 @@
   .w-full {
     width: 100%;
   }
+  .max-w-64 {
+    max-width: calc(var(--spacing) * 64);
+  }
+  .max-w-96 {
+    max-width: calc(var(--spacing) * 96);
+  }
   .min-w-32 {
     min-width: calc(var(--spacing) * 32);
   }
