--- a/public/output.css
+++ b/public/output.css
@@ -327,6 +327,9 @@
   .py-1 {
     padding-block: calc(var(--spacing) * 1);
   }
+  .pt-2 {
+    padding-top: calc(var(--spacing) * 2);
+  }
   .text-2xl {
     font-size: var(--text-2xl);
     line-height: var(--tw-leading, var(--text-2xl--line-height));
